--- a/HelloWorld Coursera.Rmd
+++ b/HelloWorld Coursera.Rmd
@@ -8,6 +8,8 @@ output: pdf_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+## This is a Markdown File
+
 
 ## R Markdown
 
@@ -29,4 +31,4 @@ plot(pressure)
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 
-##
+
